--- a/ProyectoIntegrador_VanottiFrancoMatias/src/app/components/social/social.component.html
+++ b/ProyectoIntegrador_VanottiFrancoMatias/src/app/components/social/social.component.html
@@ -1,7 +1,7 @@
 <div>
-    <a href=""> <img src="../../../assets/linkedin.png" id="linkedin"> </a>
-    <a href=""> <img src="../../../assets/twitter.png" id="twitter"> </a>
-    <a href=""> <img src="../../../assets/instagram.png" id="instagram"> </a>
-    <a href=""> <img src="../../../assets/github.png" id="github"> </a>
-    <a href=""> <img src="../../../assets/facebook.png" id="facebook"> </a>
+    <a href=""> <img src="../../../assets/linkedin.png" id="img"> </a>
+    <a href=""> <img src="../../../assets/twitter.png" id="img"> </a>
+    <a href=""> <img src="../../../assets/instagram.png" id="img"> </a>
+    <a href=""> <img src="../../../assets/github.png" id="img"> </a>
+    <a href=""> <img src="../../../assets/facebook.png" id="img"> </a>
 </div>
