--- a/ProyectoIntegrador_VanottiFrancoMatias/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegrador_VanottiFrancoMatias/src/app/components/acerca-de/acerca-de.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <div col="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/Vanotti Franco Matias FOTO.jpg" class="img-fluid" id="img">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <img src="../../../assets/DSC_7486-reto.jpg" class="img-fluid" id="fotodeperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p>Vanotti Franco Matias</p>
+        <p id="nombre">Vanotti Franco Matias</p>
         <p>Full Stack Developer Jr</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
