--- a/ProyectoIntegrador_VanottiFrancoMatias/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoIntegrador_VanottiFrancoMatias/src/app/components/acerca-de/acerca-de.component.css
@@ -3,7 +3,7 @@
 }
 
 div{
-    background-color: #a1b5cb;
+    background-color: #416DF8;
     text-align: center;
 }
 
@@ -13,9 +13,9 @@ div{
         position: absolute;
          width: 15%; 
          border-radius: 100%;
-         box-shadow: 3px 3px 3px grey;
+         box-shadow: 3px 3px 3px black;
          left: 3%;
-         top: 500px;
+         top: 350px;
     }
 }
 @media (max-width: 575px){
