--- a/ProyectoIntegrador_VanottiFrancoMatias/FrontEnd/src/app/components/login/login.component.html
+++ b/ProyectoIntegrador_VanottiFrancoMatias/FrontEnd/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
             <div class="mb-md-5 mt-md-4 pb-5">
 
               <h2 class="fw-bold mb-2 text-uppercase"> Login </h2>
-              <p class="text-white-50 mb-5">Por favor ingrese Usuario y contrase&ntilde;a</p>
+              <p class="text-white-50 mb-5">Por favor ingrese Usuario y contraseña</p>
 
               <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
 
@@ -21,7 +21,7 @@
 
                 <div class="form-outline form-white mb-4">
                   <input type="password" id="password"  name ="password" class="form-control form-control-lg" [(ngModel)]="password" required/>
-                  <label class="form-label" for="password">Contrase&ntilde;a</label>
+                  <label class="form-label" for="password">Contraseña</label>
                 </div>
 
                <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Olvidaste tu contrase&ntilde;a?</a></p> -->
