--- a/ProyectoIntegrador_VanottiFrancoMatias/FrontEnd/src/app/components/hys/hys.component.html
+++ b/ProyectoIntegrador_VanottiFrancoMatias/FrontEnd/src/app/components/hys/hys.component.html
@@ -1,111 +1,47 @@
 <div class="row">
     <h1>Hard & Soft Skills</h1>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="90"
-        [radius]="100"
-        [imageSrc]="'../assets/html.png'"
-        [showImage]="true"
-        [imageHeight]="90"
-        [imageWidth]="90"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="5"
-        [outerStrokeColor]="'#37F727'"
-        [innerStrokeColor]="'#e2e0f8'"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+
+    <div class="col-lg-2">
+        <button type="button" routerLink="/nuevaskill" class="btn btn-dark" *ngIf="isLogged">
+            Nueva Skill
+        </button>
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="85"
-        [radius]="100"
-        [imageSrc]="'../assets/css.png'"
-        [showImage]="true"
-        [imageHeight]="100"
-        [imageWidth]="70"
+
+
+    <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
+        <circle-progress 
+        [percent]="(skill.porcentaje)" 
+        [radius]="100" 
+        [imageSrc]="''" 
+        [title]="(skill.nombre)"
+        [titleColor]="'#212F3C'" 
+        [showTitle]="true"
+        [showImage]="false" 
+        [imageHeight]="90" 
+        [imageWidth]="90" 
         [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="5"
+        [showUnits]="false" 
+        [outerStrokeWidth]="16" 
+        [innerStrokeWidth]="5" 
         [outerStrokeColor]="'#37F727'"
-        [innerStrokeColor]="'#e2e0f8'"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="78"
-        [radius]="100"
-        [imageSrc]="'../assets/js.png'"
-        [showImage]="true"
-        [imageHeight]="100"
-        [imageWidth]="170"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="5"
-        [outerStrokeColor]="'#37F727'"
-        [innerStrokeColor]="'#e2e0f8'"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="65"
-        [radius]="100"
-        [imageSrc]="'../assets/githubblack.png'"
-        [showImage]="true"
-        [imageHeight]="90"
-        [imageWidth]="170"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="5"
-        [outerStrokeColor]="'#37F727'"
-        [innerStrokeColor]="'#e2e0f8'"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="82"
-        [radius]="100"
-        [imageSrc]="'../assets/comunicacion.png'"
-        [showImage]="true"
-        [imageHeight]="130"
-        [imageWidth]="130"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="5"
-        [outerStrokeColor]="'#37F727'"
-        [innerStrokeColor]="'#e2e0f8'"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="90"
-        [radius]="100"
-        [imageSrc]="'../assets/grupal.png'"
-        [showImage]="true"
-        [imageHeight]="115"
-        [imageWidth]="115"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="5"
-        [outerStrokeColor]="'#37F727'"
-        [innerStrokeColor]="'#e2e0f8'"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+        [innerStrokeColor]="'#e2e0f8'" 
+        [animation]="true" [animationDuration]="600">
+        </circle-progress>
+
+        <div>
+            <td *ngIf="isLogged">
+                <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
+                    <i class="bi bi-pencil-square"></i> 
+                </button>
+            </td>
+            <td *ngIf="isLogged">
+                <button class="btn btn-danger" (click)="delete(skill.id)">
+                    <i class="bi bi-trash3"></i> 
+                </button>
+            </td>
+        </div>
+
+        
+
     </div>
 </div>
