--- a/ProyectoIntegrador_VanottiFrancoMatias/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoIntegrador_VanottiFrancoMatias/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -7,7 +7,7 @@
                     <a href=""> <img src="../../../assets/linkedin.png" id="linkedin"> </a>
                     <a href=""> <img src="../../../assets/twitter.png" id="twitter"> </a>
                     <a href=""> <img src="../../../assets/instagram.png" id="instagram"> </a>
-                    <a href=""> <img src="../../../assets/github.png" id="github"> </a>
+                    <a href="https://github.com/Khay150"> <img src="../../../assets/github.png" id="github"> </a>
                     <a href=""> <img src="../../../assets/facebook.png" id="facebook"> </a>
                     <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESO</button>
                     <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
