--- a/src/app/components/hys/hys.component.html
+++ b/src/app/components/hys/hys.component.html
@@ -14,7 +14,7 @@
         [radius]="100" 
         [imageSrc]="''" 
         [title]="(skill.nombre)"
-        [titleColor]="'#212F3C'" 
+        [titleColor]="'#000000'" 
         [showTitle]="true"
         [showImage]="false" 
         [imageHeight]="90" 
