--- a/src/app/components/acerca-de/acerca-de.component.css
+++ b/src/app/components/acerca-de/acerca-de.component.css
@@ -7,6 +7,15 @@ div{
     background-color: #416DF8;
     text-align: center;
 }
+h1{
+   
+}
+
+
+p{
+    
+    font-size:larger;
+}
 
 /*Estilo de la foto de perfil*/
 @media (min-width: 576px){
