--- a/src/app/components/intereses/intereses.component.html
+++ b/src/app/components/intereses/intereses.component.html
@@ -1,116 +1,22 @@
 <div class="row">
     <h1>Intereses</h1>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="100"
-        [radius]="100"
-        [imageSrc]="'../assets/natacion.png'"
-        [showImage]="true"
-        [imageHeight]="180"
-        [imageWidth]="180"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="0"
-        [outerStrokeColor]="''"
-        [innerStrokeColor]="''"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+    <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
+        <img src="../assets/natacion.png" class="img-fluid img-proyecto">
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="75"
-        [radius]="100"
-        [imageSrc]="'../assets/artes-marciales.png'"
-        [showImage]="true"
-        [imageHeight]="180"
-        [imageWidth]="180"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="8"
-        [outerStrokeColor]="''"
-        [innerStrokeColor]="''"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+    <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
+        <img src="../assets/artes-marciales.png" class="img-fluid img-proyecto">
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="20"
-        [radius]="100"
-        [imageSrc]="'../assets/consola.png'"
-        [showImage]="true"
-        [imageHeight]="180"
-        [imageWidth]="180"
-        [showSubtitle]="false"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="8"
-        [outerStrokeColor]="''"
-        [innerStrokeColor]="''"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+    <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
+        <img src="../assets/consola.png" class="img-fluid img-proyecto">
     </div>
-
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="20"
-        [radius]="100"
-        [imageSrc]="'../assets/comic.png'"
-        [showImage]="true"
-        [imageHeight]="180"
-        [imageWidth]="180"
-        [showSubtitle]="true"
-        [subtitle]="'Comics'"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="8"
-        [outerStrokeColor]="''"
-        [innerStrokeColor]="''"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+    <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
+        <img src="../assets/comic.png" class="img-fluid img-proyecto">
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="20"
-        [radius]="100"
-        [imageSrc]="'../assets/cine.png'"
-        [showImage]="true"
-        [imageHeight]="180"
-        [imageWidth]="180"
-        [showSubtitle]="true"
-        [subtitle]="'Comics'"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="8"
-        [outerStrokeColor]="''"
-        [innerStrokeColor]="''"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+    <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
+        <img src="../assets/cine.png" class="img-fluid img-proyecto">
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="20"
-        [radius]="100"
-        [imageSrc]="'../assets/compu.png'"
-        [showImage]="true"
-        [imageHeight]="180"
-        [imageWidth]="180"
-        [showSubtitle]="true"
-        [subtitle]="'Comics'"
-        [showUnits]="false"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="8"
-        [outerStrokeColor]="''"
-        [innerStrokeColor]="''"
-        [animation]="true"
-        [animationDuration]="600">
-    </circle-progress>
+    <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
+        <img src="../assets/compu.png" class="img-fluid img-proyecto">
     </div>
     
 </div>
