--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -3,7 +3,7 @@
     <div class="contenedor">
         <div class="col-sm 12 col-md-7 col-lg-7 parte1">
             <h1>Proyecto 1</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In vitae cupiditate expedita animi minima enim ratione beatae nostrum et voluptatibus exercitationem sequi obcaecati, consequuntur illo natus asperiores libero fuga magnam. </p>
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In vitae cupiditate expedita animi minima enim ratione beatae nostrum et voluptatibus exercitationem sequi obcaecati, consequuntur illo natus asperiores libero fuga magnam. </h3>
         </div>
         <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
             <img src="../../../assets/proyecto 1.png" class="img-fluid img-proyecto">
@@ -11,7 +11,7 @@
 
         <div class="col-sm 12 col-md-7 col-lg-7 parte1">
             <h1>Proyecto 2</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In vitae cupiditate expedita animi minima enim ratione beatae nostrum et voluptatibus exercitationem sequi obcaecati, consequuntur illo natus asperiores libero fuga magnam. </p>
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In vitae cupiditate expedita animi minima enim ratione beatae nostrum et voluptatibus exercitationem sequi obcaecati, consequuntur illo natus asperiores libero fuga magnam. </h3>
         </div>
         <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
             <img src="../../../assets/proyecto 1.png" class="img-fluid img-proyecto">
