--- a/src/app/components/acerca-de/edit-acerca-de.component.html
+++ b/src/app/components/acerca-de/edit-acerca-de.component.html
@@ -21,6 +21,9 @@
                         <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)"
                         accept=".jpg, .jpeg, .png">
                     </div>
+                    <div class="imagen">
+                        <img [src]="imageService" width="200px">
+                    </div>
                     <br>
                     <button class="btn btn-primary">
                         Editar persona
