--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -4,11 +4,11 @@
                 <img src="../../../assets/APLogo.png" id="logoAP"> 
             </div>
             <div class="redes">
-                    <a href=""> <img src="../../../assets/linkedin.png" id="linkedin"> </a>
-                    <a href=""> <img src="../../../assets/twitter.png" id="twitter"> </a>
+                    <a href="https://www.linkedin.com/in/franco-vanotti-535558274/"> <img src="../../../assets/linkedin.png" id="linkedin"> </a>
+                    <a href="https://twitter.com/Vano_1512"> <img src="../../../assets/twitter.png" id="twitter"> </a>
                     <a href=""> <img src="../../../assets/instagram.png" id="instagram"> </a>
                     <a href="https://github.com/Khay150"> <img src="../../../assets/github.png" id="github"> </a>
-                    <a href=""> <img src="../../../assets/facebook.png" id="facebook"> </a>
+                    <a href="https://www.facebook.com/profile.php?id=100092463143229"> <img src="../../../assets/facebook.png" id="facebook"> </a>
                     <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESO</button>
                     <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
             </div>
