--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -2,19 +2,19 @@
     <h1>Proyectos Relizados</h1>
     <div class="contenedor">
         <div class="col-sm 12 col-md-7 col-lg-7 parte1">
-            <h1>Proyecto 1</h1>
-            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In vitae cupiditate expedita animi minima enim ratione beatae nostrum et voluptatibus exercitationem sequi obcaecati, consequuntur illo natus asperiores libero fuga magnam. </h3>
+            <h1>Argentina Program</h1>
+            <h3> Proyecto con el fin de crear un portfolio web </h3>
         </div>
         <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-            <img src="../../../assets/proyecto 1.png" class="img-fluid img-proyecto">
+            <img src="../../../assets/argp-01.png" class="img-fluid img-proyecto">
         </div>
 
         <div class="col-sm 12 col-md-7 col-lg-7 parte1">
-            <h1>Proyecto 2</h1>
-            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In vitae cupiditate expedita animi minima enim ratione beatae nostrum et voluptatibus exercitationem sequi obcaecati, consequuntur illo natus asperiores libero fuga magnam. </h3>
+            <h1>Proyecto Digitalers</h1>
+            <h3>Proyecto con el fin de simular una pagina de hotel llevado a cabo por Telecom </h3>
         </div>
         <div class="col-sm 12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-            <img src="../../../assets/proyecto 1.png" class="img-fluid img-proyecto">
+            <img src="../../../assets/ProyDigitalers-01.png" class="img-fluid img-proyecto">
         </div>
     </div>
 </div>
